27688 - Updated logic for Dashboard widgets; fixed minor spacing issues

--- a/PSMasterMind/app/styles/less/_index.less
+++ b/PSMasterMind/app/styles/less/_index.less
@@ -627,6 +627,9 @@ main {
 	}
 	.row {
 		margin-bottom: 15px;
+		.col-lg-12 .panel {
+			margin-bottom: 0;
+		}
 	}
 }
 
